--- a/二分查找笔记.md
+++ b/二分查找笔记.md
@@ -1,2 +1,30 @@
 分清二分答案和二分查找的区别，
 二分答案使用如下模板：
+while (l < r)
+    {
+        int mid = l + r >> 1;	//(l+r)/2
+        if (check(mid))  r = mid;    // check()判断mid是否满足性质
+        else l = mid + 1;
+    }
+
+
+while (l < r)
+    {
+        int mid = l + r + 1 >> 1;	//(l+r+1)/2
+        if (check(mid))  l = mid;
+        else r = mid - 1;
+    }
+    
+    
+普通的二分查找使用
+        left,right = 0,n-1
+
+        while left <= right:
+            mid = (left + right)>>1
+            if nums[mid] > target:
+                right = mid -1
+            elif nums[mid] < target:
+                left = mid + 1
+            else:
+                return mid
+        return -1
